attempts to update to 1.0.2

--- a/examples/ijulia/ilsvrc12/imagenet-classifier.ipynb
+++ b/examples/ijulia/ilsvrc12/imagenet-classifier.ipynb
@@ -43,9 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Mocha [f17d6557-5fdd-57bf-a30c-27e301b4ff87]\n",
+      "└ @ Base loading.jl:1186\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -53,8 +61,45 @@
       "Configuring Mocha...\n",
       " * CUDA       disabled by default\n",
       " * Native Ext disabled by default\n",
-      "Mocha configured, continue loading module...\n",
-      "DefaultBackend = Mocha.CPUBackend\n"
+      "Mocha configured, continue loading module...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: LoadError: LoadError: syntax: \"$\" expression outside quote\n",
+      "Stacktrace:\n",
+      " [1] include at ./boot.jl:317 [inlined]\n",
+      " [2] include_relative(::Module, ::String) at ./loading.jl:1038\n",
+      " [3] include at ./sysimg.jl:29 [inlined]\n",
+      " [4] include(::String) at /Users/IanB/Leuko/GitHub/Mocha.jl/src/Mocha.jl:1\n",
+      " [5] top-level scope at none:0\n",
+      " [6] include at ./boot.jl:317 [inlined]\n",
+      " [7] include_relative(::Module, ::String) at ./loading.jl:1038\n",
+      " [8] include(::Module, ::String) at ./sysimg.jl:29\n",
+      " [9] top-level scope at none:2\n",
+      " [10] eval at ./boot.jl:319 [inlined]\n",
+      " [11] eval(::Expr) at ./client.jl:397\n",
+      " [12] top-level scope at ./none:3\n",
+      "in expression starting at /Users/IanB/Leuko/GitHub/Mocha.jl/src/macros.jl:33\n",
+      "in expression starting at /Users/IanB/Leuko/GitHub/Mocha.jl/src/Mocha.jl:18\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "Failed to precompile Mocha [f17d6557-5fdd-57bf-a30c-27e301b4ff87] to /Users/IanB/.julia/compiled/v1.1/Mocha/Kv2xC.ji.",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile Mocha [f17d6557-5fdd-57bf-a30c-27e301b4ff87] to /Users/IanB/.julia/compiled/v1.1/Mocha/Kv2xC.ji.",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] compilecache(::Base.PkgId, ::String) at ./loading.jl:1197",
+      " [3] _require(::Base.PkgId) at ./loading.jl:960",
+      " [4] require(::Base.PkgId) at ./loading.jl:858",
+      " [5] require(::Module, ::Symbol) at ./loading.jl:853",
+      " [6] top-level scope at In[3]:1"
      ]
     }
    ],
@@ -4131,15 +4176,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.1",
+   "display_name": "Julia 1.1.0-DEV",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.1"
+   "version": "1.1.0"
   }
  },
  "nbformat": 4,
